# petraea

./: .gitignore  LICENSE  Makefile  README.md  genhdr.c  meson.build
include/: codecache.h  cpu.h  instr.h  util.h
source/: codecache.c  cpu.c  decoder.c  emitter-sljit.c  executor.c  main.c  util.c
source/x64/: executor_x64.S  executor_x64.c
subprojects/: sljit.wrap
subprojects/packagefiles/sljit/: meson.build
test/: codecache.test.c  cpu.test.c  decoder.test.c  executor.test.c  jit.test.c  util.test.c
test/x64/: executor_x64.test.c
